VM-204 Adding ConsultaEnte
